@@ -1,3 +1,8 @@
+2014-07-15 Max Baak <mbaak@cern.ch>
+	M       src/Utils.cxx
+	M       src/ValidationUtils.cxx
+	* Fix two small compiler warnings
+
 2014-07-14 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
         * setup.sh: update to Root 5.34.19 and load more recent xrootd libraries
 
